@@ -21,6 +21,8 @@
 #include <wait.h>
 #include <sys/time.h>
 
+#include <portaudio.h>
+
 #include "flow.h"
 
 static int rate = 32000;
@@ -35,12 +37,14 @@ void usage(int exitcode, FILE *out)
 {
 	fprintf(out,"Usage: %s\n", progname);
 	fprintf(out,"  Parameters:\n");
-	fprintf(out,"    rate NUM          -- samples/second; default: 32000\n");
-	fprintf(out,"    timestamp         -- print a timestamp before the data\n");
-	fprintf(out,"    progress          -- print something to stderr, once a second\n");
-	fprintf(out,"    log MIN MAX NUM   -- trace receiver signal\n");
+	fprintf(out,"    rate NUM            -- samples/second; default: 32000\n");
+	fprintf(out,"    timestamp           -- print a timestamp before the data\n");
+	fprintf(out,"    progress            -- print something to stderr, once a second\n");
+	fprintf(out,"    log MIN MAX NUM     -- trace receiver signal\n");
 	fprintf(out,"  Actual work (needs to be last!):\n");
-	fprintf(out,"    exec program args -- run this program, read from stdin\n");
+	fprintf(out,"    portaudio interface -- read from this sound input\n");
+	fprintf(out,"    portaudio           -- list sound inputs\n");
+	fprintf(out,"    exec program args   -- run this program, read from stdin\n");
 	exit(exitcode);
 }
 
@@ -79,7 +83,7 @@ static int set_timestamp(int argc, char *argv[])
 /*************** exec some other program **********************/
 
 void printer(void *unused __attribute__((unused)),
-	unsigned char *buf, unsigned int len)
+	const unsigned char *buf, unsigned int len)
 {
 	if(timestamp) {
 		struct timeval tv;
@@ -156,6 +160,146 @@ static int do_exec(int argc, char *argv[])
 	/* NOTREACHED */
 }
 
+
+
+/************************************************************************/
+
+/* PortAudio. Note that
+ * - ALSA does not work; use OSS inputs.
+ * - Nonblocking mode does not work; this code blocks.
+ */
+
+static void do_pa_error(PaError err, const char *str)
+{
+	if(!err) return;
+	fprintf(stderr,"PortAudio: %s: %s\n", str, Pa_GetErrorText(err));
+	exit(2);
+}
+
+static int do_pa_callback(
+    const void *input, void *output,
+	unsigned long frameCount,
+	const PaStreamCallbackTimeInfo* timeInfo,
+	PaStreamCallbackFlags statusFlags,
+	void *userData)
+{
+	static PaStreamCallbackFlags reported = 0;
+	PaStreamCallbackFlags report = statusFlags & ~reported;
+	FLOW *f = userData;
+
+	if(report & paInputUnderflow) fprintf(stderr,"Input underflow\n");
+	if(report & paInputOverflow) fprintf(stderr,"Input overflow\n");
+	
+	if(frameCount) {
+		flow_read_buf(f,input,frameCount);
+		if(progress) {
+			progress += frameCount;
+			if(progress > rate) {
+				fprintf(stderr,"x\r");
+				fflush(stderr);
+				progress = (progress-1) % rate +1;
+			}
+		}
+		if(0){
+			const unsigned char *buf = input;
+			while(frameCount--) fputc(*buf++,stdout);
+			fflush(stdout);
+		}
+	} else
+		fprintf(stderr,"empty buffer\n");
+
+	reported = statusFlags;
+	return paContinue;
+}
+
+__attribute__((noreturn)) 
+static void do_pa_run(PaDeviceIndex idx, PaTime latency)
+{
+	FLOW *f;
+	PaError err;
+	struct PaStreamParameters param;
+	PaStream *stream = NULL;
+
+	f = flow_setup(rate, 3,4,5,6,7);
+	flow_reader(f,printer,NULL);
+	if(log_len) flow_report(f,log_min,log_max,log_len);
+
+	memset(&param,0,sizeof(param));
+	param.device = idx;
+	param.channelCount = 1;
+	param.sampleFormat = paUInt8;
+	param.suggestedLatency = latency;
+
+	err = Pa_IsFormatSupported(&param,NULL,rate);
+	do_pa_error(err,"unsupported");
+
+	err = Pa_OpenStream(&stream, &param, NULL, (double)rate,
+	         paFramesPerBufferUnspecified,paNoFlag, /* &do_pa_callback */ NULL, f);
+	do_pa_error(err,"open");
+	
+	err = Pa_StartStream(stream);
+	do_pa_error(err,"start");
+
+	while(1) {
+#if 1
+		unsigned char buf[128];
+		err = Pa_ReadStream(stream,buf,sizeof(buf));
+		if (err == paInputOverflowed)
+			fprintf(stderr,"Input overflow\n");
+		else do_pa_error(err, "read");
+		do_pa_callback(buf,NULL,sizeof(buf),NULL,0,f);
+#endif
+		err = Pa_IsStreamActive(stream);
+		if (err < 0) do_pa_error(err, "is_active");
+		if (err == 0) break;
+#if 0
+		sleep(60);
+#endif
+	}
+	err = Pa_AbortStream(stream);
+	do_pa_error(err,"end");
+
+	err = Pa_CloseStream(stream);
+	do_pa_error(err,"close");
+
+	err = Pa_Terminate();
+	do_pa_error(err,"exit");
+	exit(err != 0);
+}
+
+__attribute__((noreturn)) 
+static int do_portaudio(int argc, char *argv[])
+{
+	PaError err;
+	PaDeviceIndex idx;
+
+	err = Pa_Initialize();
+	do_pa_error(err,"init");
+
+	if (argc > 1) usage(2,stderr);
+	idx = Pa_GetDeviceCount();
+	if(!idx) {
+		fprintf(stderr,"No devices available!\n");
+		exit(1);
+	} else if (idx < 0)
+		do_pa_error(idx,"Device enum");
+
+	while(idx-- > 0) {
+		const struct PaDeviceInfo *dev = Pa_GetDeviceInfo(idx);
+		if(argc) {
+			if (!strcmp(dev->name,argv[0]))
+				do_pa_run(idx, dev->defaultLowInputLatency);
+		} else
+			printf("%s (%f)\n",dev->name, dev->defaultSampleRate);
+	}
+	if (argc) {
+		fprintf(stderr,"Device '%s' not found.\n",argv[0]);
+		exit(1);
+	}
+	exit(0);
+	/* NOTREACHED */
+}
+
 typedef int (*pcall)(int,char **);
 struct {
 	const char *what;
@@ -167,6 +311,7 @@ struct {
 	{"timestamp", set_timestamp},
 	{"log", set_log},
 	{"exec", do_exec},
+	{"portaudio", do_portaudio},
 };
 
 int main(int argc, char *argv[])
