@@ -15,8 +15,9 @@ homevent (0.2.6) stable; urgency=low
   * Support FS20 switches.
   * Fix stderr/stdout logging when starting HomEvenT
     via the Debian init script.
+  * Implemented PortAudio interface.
 
- -- Matthias Urlichs <matthias@urlichs.de>  Wed, 26 Dec 2007 19:56:32 +0100
+ -- Matthias Urlichs <matthias@urlichs.de>  Sat, 29 Dec 2007 08:26:15 +0100
 
 homevent (0.2.5.6) stable; urgency=low
 
